S68-S82: Security hardening, quiz SOTA, PWA offline-first, admin UX separation, course mgmt audit
Sessions 68-82 spanning full system production hardening:

- S68: Notes CRUD, Certificate PDF, Audit Logs, Email Verification (685 tests)
- S69-71: Quiz SOTA (Canvas/Moodle/Coursera) — answer visibility, essay grading,
  teacher ownership, auto-save, availability window, paginated attempts
- S72: Full security audit — 14 P0 IDOR fixes, privilege escalation prevention,
  secret masking, HashUtil extraction, 8 dead files deleted
- S73: PWA Download-First — streaming video (zero RAM), persistent offline banner,
  cancel download, satellite NGSW timeouts, AuthService signal wrappers
- S74: Module-by-module security — PackageController/AiAssistant access control,
  6 IDOR fixes, @Size/@NotBlank validation hardening
- S75: SELF_PACED enrollment fix — SelfEnrollUseCase, DEFAULT class pattern,
  PaymentVerificationPort, FE enrollCourse wiring
- S76-77: N+1 elimination — getEnrolledCourses 600→5 queries, getStudentGrades
  600→8 queries, batch repo methods, 5 dead domain events deleted
- S78-79: System cleanup — IDOR fixes, ifPresent→orElseThrow, dead code removal,
  ErrorHandlingService signal→computed reactivity fix
- S80-80b: PWA sync pipeline — SW message listener, per-chapter DB write,
  pullChanges batch query, syncQueue cleanup on delete
- S81: Admin UX/UI separation — role-split sidebar (ADMIN vs ORG_ADMIN),
  dashboard separation, ai-knowledge deleted, maritime→#0056D2 tokens
- S82: Admin course management audit — Course.revoke() domain method,
  N+1 batch enrollment count, server-side pagination, table UX compact
  (7→5 columns), initials avatar fallback, rejection reason guard

BE: 788 tests, 0 failures | FE: 0 build errors
233 files changed, 12043 insertions, 7699 deletions

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>